--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,14 +4,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    {#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
     <title>W-Mirshod</title>
     <meta name="description" content="Web designer and front-end developer">
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet"
           type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
+    <link rel="icon" type="image/x-icon"
+          href="https://i.pinimg.com/564x/34/3e/a6/343ea653f35d26c6ee307551188d3ab3.jpg">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
 </head>
@@ -57,7 +61,7 @@
 
     <div class="section aboutme" data-anchor="aboutme">
         <div class="opaque-bg animated fadeInDown">
-            <h1 style="color:white">BRAD<span style="color:#FF6363">/</span>ENGELHARDT</h1>
+            <h1 style="color:white">W<span style="color:#FF6363">-</span>MIRSHOD</h1>
             <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
         </div>
         <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
@@ -69,45 +73,19 @@
     <div class="section" data-anchor="skills">
         <div class="content">
             <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
-            <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm Brad Engelhardt! I'm a Silicon Valley based Web
-                Designer & Front-end Developer focused on creating clean, responsive web designs!</p>
+            <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm W Mirshod! I'm a software developer with
+                2year+ experience in Software Development with many tools:</p>
 
             <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
-                <div class="skillbar clearfix " data-percent="90%">
-                    <div class="skillbar-title" style="background: #DD1E2F;"><span>HTML5</span></div>
-                    <div class="skillbar-bar" style="background: #DD1E2F;"></div>
-                    <div class="skill-bar-percent">90%</div>
-                </div> <!-- End Skill Bar -->
+                {% for skill in skills %}
+                    <div class="skillbar clearfix " data-percent="{{ skill.percent }}%">
+                        <div class="skillbar-title" style="background: {{ skill.title_color }};">
+                            <span>{{ skill.title }}</span></div>
+                        <div class="skillbar-bar" style="background: {{ skill.background_color }};"></div>
+                        <div class="skill-bar-percent">{{ skill.percent }}%</div>
+                    </div> <!-- End Skill Bar -->
+                {% endfor %}
 
-                <div class="skillbar clearfix " data-percent="80%">
-                    <div class="skillbar-title" style="background: #EBB035;"><span>CSS3</span></div>
-                    <div class="skillbar-bar" style="background: #EBB035;"></div>
-                    <div class="skill-bar-percent">80%</div>
-                </div> <!-- End Skill Bar -->
-
-                <div class="skillbar clearfix " data-percent="75%">
-                    <div class="skillbar-title" style="background: #218559;"><span>Photoshop</span></div>
-                    <div class="skillbar-bar" style="background: #218559;"></div>
-                    <div class="skill-bar-percent">75%</div>
-                </div> <!-- End Skill Bar -->
-
-                <div class="skillbar clearfix " data-percent="45%">
-                    <div class="skillbar-title" style="background: #6840D4;"><span>Rails</span></div>
-                    <div class="skillbar-bar" style="background: #6840D4;"></div>
-                    <div class="skill-bar-percent">45%</div>
-                </div> <!-- End Skill Bar -->
-
-                <div class="skillbar clearfix " data-percent="30%">
-                    <div class="skillbar-title" style="background: #06A2CB;"><span>jQuery</span></div>
-                    <div class="skillbar-bar" style="background: #06A2CB;"></div>
-                    <div class="skill-bar-percent">30%</div>
-                </div> <!-- End Skill Bar -->
-
-                <div class="skillbar clearfix " data-percent="20%">
-                    <div class="skillbar-title" style="background: #AB4DD2;"><span>PHP</span></div>
-                    <div class="skillbar-bar" style="background: #AB4DD2;"></div>
-                    <div class="skill-bar-percent">20%</div>
-                </div> <!-- End Skill Bar -->
             </div>
         </div>
     </div>
@@ -117,37 +95,16 @@
 
     <div class="section" data-anchor="projects">
         <div class="content-slide">
-            <div class="slide">
-                <h1 class="wow fadeInDown" data-wow-delay="0.2s">XFAIRE</h1>
-                <p class="wow fadeInDown" data-wow-delay="0.2s">Digital streaming service</p>
-                <img class="wow fadeInUp" data-wow-delay="0.2s"
-                     data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/xfaire.jpg">
-            </div>
-            <div class="slide">
-                <h1>MACHETE ENERGY</h1>
-                <p>Energy drink website</p>
-                <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/machete.jpg">
-            </div>
-            <div class="slide">
-                <h1>PORTFOLIO</h1>
-                <p>Mockup of a personal portfolio I was working on for a friend.</p>
-                <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/cascioportfolio.jpg">
-            </div>
-            <div class="slide">
-                <h1>THATONEBLOG</h1>
-                <p>Minimalist blogging platform.</p>
-                <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/blog.jpg">
-            </div>
-            <div class="slide">
-                <h1>PIXBORED</h1>
-                <p>Website for sharing images and gifs.</p>
-                <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/pixbored.jpg">
-            </div>
-            <div class="slide">
-                <h1>PERSONAL WEBSITE</h1>
-                <p>Responsive vertical/horizontal header website theme.</p>
-                <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/personalsite.jpg">
-            </div>
+
+            {% for project in projects %}
+                <div class="slide">
+                    <h1 class="wow fadeInDown" data-wow-delay="0.2s">{{ project.title }}</h1>
+                    <p class="wow fadeInDown" data-wow-delay="0.2s">{{ project.description }}</p>
+                    <img class="wow fadeInUp" data-wow-delay="0.2s"
+                         data-src="{{ project.picture_link }}">
+                </div>
+            {% endfor %}
+
         </div>
     </div>
     <!-- end section -->
@@ -156,8 +113,9 @@
 
     <div class="section" data-anchor="contact">
         <div class="content wow fadeInDown" data-wow-delay="0.2s">
-            <h1>CONTACT ME</h1>
-            <p>Whether you're interested in working with me or just want to say hello, I'd love to hear from you!</p>
+            <h1>CONTACTING</h1>
+            <p>Whether you're interested in working with me or just want to get information, You can contact with
+                me!</p>
             <br>
             <div class="contact-form">
 
@@ -203,13 +161,14 @@
         <div class="footer">
             <p>CONNECT WITH ME</p>
             <div class="social-links">
-                <span><a href="https://www.linkedin.com/in/bradleyengelhardt" target="_blank"><i
+                <span><a href="https://github.com/W-Mirshod" target="_blank"><i
+                        class="fa fa-github fa-2x"></i></a></span>
+                <span><a href="mailto:trading3526@gmail.com" target="_blank"><i
+                        class="fa fa-envelope fa-2x"></i></a></span>
+                <span><a href="https://t.me/maverick3526" target="_blank"><i
+                        class="fa fa-telegram fa-2x"></i></a></span>
+                <span><a href="https://www.linkedin.com/in/w-mirshod" target="_blank"><i
                         class="fa fa-linkedin fa-2x"></i></a></span>
-                <span><a target="_blank" href="https://twitter.com/bradengelhardt" target="_blank"><i
-                        class="fa fa-twitter fa-2x"></i></a></span>
-                <span><a href="https://github.com/SquishyAndroid" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
-                <span><a href="https://codepen.io/SquishyAndroid/pens/public/"><i
-                        class="fa fa-codepen fa-2x"></i></a></span>
             </div>
         </div>
     </div>
@@ -223,7 +182,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.js'></script>
-<script src="{% static 'script.js' %}"></script>
+<script src="{% static 'scriptS.js' %}"></script>
 
 </body>
 </html>
