--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W-Mirshod</title>
     <meta name="description" content="Web designer and front-end developer">
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
