--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -74,7 +74,7 @@
         <div class="content">
             <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
             <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm W Mirshod! I'm a software developer with
-                2year+ experience in Software Development with many tools:</p>
+                2year+ experience in Backend Development with many tools:</p>
 
             <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
                 {% for skill in skills %}
