--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -100,7 +100,7 @@
                 <div class="slide">
                     <h1 class="wow fadeInDown" data-wow-delay="0.2s">{{ project.title }}</h1>
                     <p class="wow fadeInDown" data-wow-delay="0.2s">{{ project.description }}</p>
-                    <img class="wow fadeInUp" data-wow-delay="0.2s" data-src="{{ project.picture_link }}">
+                    <img class="wow fadeInUp" data-wow-delay="0.2s" data-src="{{ project.picture }}">
                     <p><a href="{{ project.project_link }}">Project's GitHub Link</a></p>
                 </div>
             {% endfor %}
