--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -183,7 +183,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.js'></script>
-<script src="{% static 'scripts.js' %}"></script>
+<script src="{% static 'script.js' %}"></script>
 
 </body>
 </html>
