--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -101,7 +101,7 @@
                     <h1 class="wow fadeInDown" data-wow-delay="0.2s">{{ project.title }}</h1>
                     <p class="wow fadeInDown" data-wow-delay="0.2s">{{ project.description }}</p>
                     <img class="wow fadeInUp" data-wow-delay="0.2s" src="{{ project.picture.url }}">
-                    <p><a href="{{ project.project_link }}">Project's GitHub Link</a></p>
+                    <p><a href="{{ project.project_link }}" target="_blank">Project's GitHub Link</a></p>
                 </div>
             {% endfor %}
 
