--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -7,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W-Mirshod</title>
     <meta name="description" content="Web designer and front-end developer">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="W-Mirshod">
+    <meta property="og:description" content="SOFTWARE ENGINEER / DJANGO BACKEND DEVELOPER">
+    <meta property="og:image" content="https://th.bing.com/th/id/OIP.We5lMptWy0rwOIBwfyEP9gHaHM?rs=1&pid=ImgDetMain">
+    <meta property="og:url" content="https://w-mirshod.com/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags (optional) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="W-Mirshod">
+    <meta name="twitter:description" content="SOFTWARE ENGINEER / DJANGO BACKEND DEVELOPERr">
+    <meta name="twitter:image" content="https://th.bing.com/th/id/OIP.We5lMptWy0rwOIBwfyEP9gHaHM?rs=1&pid=ImgDetMain">
+
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet"
           type="text/css">
@@ -15,17 +29,17 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
     <link rel="icon" type="image/x-icon"
-          href="https://i.pinimg.com/564x/34/3e/a6/343ea653f35d26c6ee307551188d3ab3.jpg">
+          href="https://th.bing.com/th/id/OIP.We5lMptWy0rwOIBwfyEP9gHaHM?rs=1&pid=ImgDetMain">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-
 </head>
+
 <body>
 <!-- partial:index.partial.html -->
 <body>
 <!-- navbar header -->
 <div class="nav-header">
     <div class="nav-brand">
-        <img src="https://s3-us-west-2.amazonaws.com/parallax-theme/assets/bradlogo2.png">
+        <img src="{% static 'Mirshod.png' %}">
     </div>
     <i class="fa fa-bars fa-3x"></i>
     <div class="header-links">
