--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="W-Mirshod">
     <meta property="og:description" content="SOFTWARE ENGINEER / DJANGO BACKEND DEVELOPER">
-    <meta property="og:image" content="https://th.bing.com/th/id/OIP.We5lMptWy0rwOIBwfyEP9gHaHM?rs=1&pid=ImgDetMain">
+    <meta property="og:image" content="{% static 'Mirshod.png' %}">
     <meta property="og:url" content="https://w-mirshod.com/">
     <meta property="og:type" content="website">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="W-Mirshod">
     <meta name="twitter:description" content="SOFTWARE ENGINEER / DJANGO BACKEND DEVELOPERr">
-    <meta name="twitter:image" content="https://th.bing.com/th/id/OIP.We5lMptWy0rwOIBwfyEP9gHaHM?rs=1&pid=ImgDetMain">
+    <meta name="twitter:image" content="{% static 'Mirshod.png' %}">
 
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet"
