--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -44,9 +44,12 @@
     document.addEventListener('DOMContentLoaded', (event) => {
         const audio = document.getElementById('background-music');
 
+        // Set the volume to 50%
+        audio.volume = 0.5; // Volume ranges from 0.0 to 1.0
+
         // Attempt to play the audio when the page is loaded
         audio.play().catch(error => {
-            // Play the audio when the user interacts with the page
+            // If auto-play fails, set up a click event listener to play audio
             document.addEventListener('click', () => {
                 audio.play().catch(error => {
                     console.error('Failed to play audio:', error);
@@ -229,7 +232,7 @@
     });
 </script>
 <script>
-    document.getElementById('ajax-contact').addEventListener('submit', function(event) {
+    document.getElementById('ajax-contact').addEventListener('submit', function (event) {
         event.preventDefault(); // Prevent default form submission
 
         const recaptchaResponse = grecaptcha.getResponse();
@@ -265,7 +268,7 @@
     });
 
     function hideMessageAfterDelay(element) {
-        setTimeout(function() {
+        setTimeout(function () {
             element.style.display = 'none';
         }, 3000); // Hide message after 5 seconds
     }
