--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -264,7 +264,7 @@
             messagesDiv.classList.add('alert-success');
         } else {
             messagesDiv.textContent = "An error occurred while sending your message. Please try again.";
-            {#messagesDiv.classList.add('alert-danger');#}
+            messagesDiv.classList.add('alert-danger');
         }
 
         messagesDiv.style.display = 'block';
