--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -179,12 +179,15 @@
                         <input type="text" class="form-control" id="human" name="human" placeholder="">
                     </div>
 
-                    <div class="g-recaptcha wow fadeInUp" data-wow-delay="1.2s"
-                         data-sitekey="6Ld5slAqAAAAAOQ7IN70HQVoUKL7x6uGKrN5i7aZ"></div>
+                    <div style="display: flex; justify-content: center;">
+                        <div class="g-recaptcha wow fadeInRight" data-wow-delay="1.2s"
+                             data-sitekey="6Ld5slAqAAAAAOQ7IN70HQVoUKL7x6uGKrN5i7aZ"></div>
+                    </div>
 
                     <br>
+                    <br>
 
-                    <div class="wow fadeInUp" data-wow-delay="1s">
+                    <div class="wow fadeInUp" data-wow-delay="1.2s">
                         <button type="submit" id="submit" name="submit" class="btn btn-lg">SEND MESSAGE</button>
                     </div>
                 </form>
