--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -38,14 +38,14 @@
 <!-- partial:index.partial.html -->
 <body>
 
-<audio id="background-music" src="{% static 'Audio_7029225733_94.mp3' %}" preload="auto"></audio>
+<audio id="background-music" src="{% static 'Audio_7029225733_94.m4a' %}" preload="auto"></audio>
 
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         const audio = document.getElementById('background-music');
 
         // Set the volume to 50%
-        audio.volume = 0.4; // Volume ranges from 0.0 to 1.0
+        audio.volume = 0.6; // Volume ranges from 0.0 to 1.0
 
         // Attempt to play the audio when the page is loaded
         audio.play().catch(error => {
@@ -69,8 +69,10 @@
     <div class="header-links">
         <ul>
             <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
-            <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
-            <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
+            <li data-menuanchor="thirdPage"><a href="#portfolio">PROJECTS</a></li>
+            <li data-menuanchor="secondPage"><a href="#about">SKILLS</a></li>
+            <li data-menuanchor="secondPage"><a href="https://github.com/W-Mirshod" target="_parent">GITHUB</a></li>
+            <li data-menuanchor="secondPage"><a href="{% url 'v2_main' %}">NEW VERSION !</a></li>
         </ul>
     </div>
 </div>
@@ -112,14 +114,14 @@
         <div class="content">
             <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
             <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm W Mirshod! I'm a software developer with
-                2year+ experience in Backend Development with many tools:</p>
+                3year+ experience in Backend Development with many tools:</p>
 
             <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
                 {% for skill in skills %}
                     <div class="skillbar clearfix " data-percent="{{ skill.percent }}%">
-                        <div class="skillbar-title" style="background: {{ skill.title_color }};">
+                        <div class="skillbar-title" style="background: {{ skill.title_color }}">
                             <span>{{ skill.title }}</span></div>
-                        <div class="skillbar-bar" style="background: {{ skill.background_color }};"></div>
+                        <div class="skillbar-bar" style="background: {{ skill.background_color }}"></div>
                         <div class="skill-bar-percent">{{ skill.percent }}%</div>
                     </div> <!-- End Skill Bar -->
                 {% endfor %}
